--- a/VRChat/79/1276479.html
+++ b/VRChat/79/1276479.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JyPE4xvgOxKlX/RWq3DbZabaXDh8hzkqJACoILyz1gU="></script>
+    "Cej7r5DqcMsVkXEVQVJr87UWHe0P6vSqE6ZYUEBkO7o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"和柄リボンセット(色・柄違い10種）","description":"和柄っぽいリボンのセットです。３Dモデルに使用して少しのおしゃれ！！基本的に後頭部向けですが、それ以外の場所でも問題なく使えますよー！！\n\n本体説明\n〇製品内容(サンプル画像のアバターは付属いたしません)\n・fbxファイル(Ribbon)\n・本体用テクスチャセット(10種)\n・本体用マテリアル(10種)\n・readme(利用規約)\n・UnityChanToonShaderVer2\n※当３DモデルはUnityChanToonShaderVer2を使用して制作しております。そのため、UnityChanToonShaderVer2を同梱し再配布という形をとっております。\n\n〇導入方法\nファイル『Unity導入用、fbx』をUnityのProjectにDrag\u0026Dropしてください。\nPrefabがありますのでお好きなMaterialを適用してご使用ください。\n\n〇ポリゴン数\n・△1070\n\n〇お問い合わせ\n不具合、要望あれば@kurogoma1996　までご連絡ください。\n\n","url":"https://booth.pm/ja/items/1276479","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/46562510-06c8-4894-b8da-23e5c97cfcf0/i/1276479/db3bd1ba-8ee5-4190-83ff-59ef5a8cf611_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JyPE4xvgOxKlX/RWq3DbZabaXDh8hzkqJACoILyz1gU="></script>
+    nonce="Cej7r5DqcMsVkXEVQVJr87UWHe0P6vSqE6ZYUEBkO7o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -448,9 +448,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
