--- a/VRChat/72/1276372.html
+++ b/VRChat/72/1276372.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "61fD9O7LtqTxGwp5l1/fh9myPvWaqQeDa2iUVNxRZmM="></script>
+    "r9/6Y6gE5xNxJyFfjkhW62GSmJO+77F572Ilh4/Pra8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"斧「Ykr-Arex」VRC向け　FBX＆Unity package","description":"本製品は、VRChat向け、fbx形式の3Dペンギンモデルです。\n\n▼当製品について\n本モデルは「Ykr-Armament.co」が製作する武器、装備品、イメージ品のモデルとなっております。\n民間用モデルですが、軍事用として、改造も可能です。\n\nYkr社では、近代武器などを作成しておりましたが、古代より使われているAexを近代改修\n近代の有機物質テクノロジーにより、耐久性を上げさらには補強するためのパイプ等を接続しました\n\n▼製品内容\nreadme\nFBXファイル\nテクスチャファイル(ベースカラー、メタリック、ノーマルマップ等)\ntex1では模様有り　tex2では模様無し\n\n▼使用に関して\n１．著作権は製作者「Yuuki-rin」に帰属、改変後もYuuki-rinに帰属\n２．使用禁止事項\n→再配布、改変後の再配布は禁止とします\n→改変後であっても、元のモデルの自作発言は禁止とします。\n　※改変後の部分等は自慢してもらっても大丈夫です。元々ある部分のみが対象です。\n\n３．使用可能事項\n→「テクスチャ改変」「モデル改変」「UVの改変」「動画」「営業利用」等、基本的にはなんでもOKです\n※可能かどうか、ご不明点ございましたら、ご連絡お願いいたします。\n\n４．免責事項\n→本データを利用による損害に対する責任は追わないものとさせていただきます。\n→特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\nその他不明点等ございましたら、Twitterへご連絡お願いいたします。\n＠Yukki_WarVtuber\n\nURL:https://twitter.com/Yukki_WarVtuber\n\n","url":"https://booth.pm/ja/items/1276372","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/8488e81a-360b-4cf8-a9ff-572ec8fd6b04/i/1276372/cf33713b-84f6-45bb-9bb5-96428a0d50af_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="61fD9O7LtqTxGwp5l1/fh9myPvWaqQeDa2iUVNxRZmM="></script>
+    nonce="r9/6Y6gE5xNxJyFfjkhW62GSmJO+77F572Ilh4/Pra8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -192,7 +192,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      34
+                                      33
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -208,7 +208,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      34
+                                      33
                                     </div>
                                   </div></a>
                                 </div>
@@ -431,9 +431,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
