--- a/VRChat/24/1275724.html
+++ b/VRChat/24/1275724.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vVhwymzF4/0PysynpyxbyNzisuMUWSp2SO6XqrMMjwU="></script>
+    "CdMc4cFwIlpBLA+GplrNkt+oNxheL0o9jmaercBmVb8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブーツ『shironekopunks』 - over the petal　△900","description":"シューズブランド\"over the petal\"より『kurousapunks』(https://is3.booth.pm/items/1116272)のリミテッドモデル入荷です！\n\n\n『暑い日も寒い日もどちらでもない日、それと特別な日もshironekopunksで楽しくかわいくかっこよく！　今日も明日も来週も来月も歩くのが楽しみ！』\n\n\nデータ内には\nshironekopunks.fbx(ブーツ本体)\nshironekopunks.unitypackage\nreadme.txt\ntextureフォルダ\n　┗Albedo,Metallic,Normalテクスチャ(全て512*512)\n\nが含まれております。\n使用前にreadme.txtをお読みくださいますようお願いします。\n","url":"https://booth.pm/ja/items/1275724","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/013f360b-9e6b-4ab6-813d-0e93f9b046db/i/1275724/314721c6-ee8f-462e-9b41-a546ca4ab095_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vVhwymzF4/0PysynpyxbyNzisuMUWSp2SO6XqrMMjwU="></script>
+    nonce="CdMc4cFwIlpBLA+GplrNkt+oNxheL0o9jmaercBmVb8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -176,7 +176,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      356
+                                      357
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -192,7 +192,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      356
+                                      357
                                     </div>
                                   </div></a>
                                 </div>
@@ -641,9 +641,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
