--- a/VRChat/71/1275071.html
+++ b/VRChat/71/1275071.html
@@ -105,7 +105,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+jUVw1e0Ah1uO/EMHlJqkSejfFkw1vjpMWIhkYwrWgk="></script>
+    "F3p6XIwnsNlV76oi5Q8xeY8L2BRBb5Sm48674ii1hV4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"コンサートペンライト","description":"■　HKG Style Penlight　■","url":"https://booth.pm/ja/items/1275071","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ef636c3e-c379-4ba7-9bff-aa6b51029c71/i/1275071/a924d612-55e9-4793-8254-d4b551613ab2_base_resized.jpg"}
     </script>
@@ -116,7 +116,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+jUVw1e0Ah1uO/EMHlJqkSejfFkw1vjpMWIhkYwrWgk="></script>
+    nonce="F3p6XIwnsNlV76oi5Q8xeY8L2BRBb5Sm48674ii1hV4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -559,9 +559,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
