--- a/VRChat/79/1275479.html
+++ b/VRChat/79/1275479.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kQXEV/vs1lA42uCWHa8FKOteH/ckLD0FvyCf+AW6smo="></script>
+    "fD5RKxsQOsHyPltyg0zBZQ5PP4sUMN+r3BnPWATiDeQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ナツカゼのゴーグル","description":"ナツカゼちゃんの思い出が詰まったゴーグルなのだ！\n\nVRChatでアバターに身に付けたり、ワールドに飾ったりするとよいのだ！\n\nポリゴン数は▲872\n装着シェイプキーが入っているのだ！\n（ナツカゼちゃんの大きめの頭に合わせて動くから、合わない場合は自分で比率を調節するのだ）\n\nVRC向けのunitypackageになっているのだ！\n\n要望や不具合などがあったらTwitterのDMまで知らせてほしいのだ！","url":"https://booth.pm/ja/items/1275479","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/8d9d1fb7-104d-4c64-8a88-79480e72d300/i/1275479/ff4abade-f3aa-442e-a587-8394ff8c2903_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kQXEV/vs1lA42uCWHa8FKOteH/ckLD0FvyCf+AW6smo="></script>
+    nonce="fD5RKxsQOsHyPltyg0zBZQ5PP4sUMN+r3BnPWATiDeQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -442,9 +442,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
